add: get task result handler
